--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -2,18 +2,11 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-
-  /* padding: 1rem; */
   width: 100vw;
 }
 
 .header-parent:first-child {
   margin-left: 0;
-}
-
-.header-parent h2 {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .main-header {
@@ -25,6 +18,11 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   margin-bottom: 1rem;
-  padding: 0.5rem;
+  padding: 0.8rem;
   width: 100vw;
+}
+
+.header-parent h2 {
+  font-size: 1.5rem;
+  margin: auto;
 }
