--- a/src/Pages/ExploreArea/styles.css
+++ b/src/Pages/ExploreArea/styles.css
@@ -1,3 +1,9 @@
-select {
-  min-width: 90%;
+.select-size {
+  display: flex;
+  justify-content: center;
+}
+
+.select-size > select {
+  width: 90%;
+  padding: 0.5rem;
 }
