--- a/src/Components/Ingredients/styles.css
+++ b/src/Components/Ingredients/styles.css
@@ -13,3 +13,15 @@
   font-size: 1.2rem;
   margin-left: 1rem;
 }
+
+@media screen and (min-width: 1024px) {
+  .parent {
+    min-width: 60%;
+    margin: 1rem;
+    align-items: flex-start;
+  }
+
+  .parent h2 {
+    align-self: center;
+  }
+}
