--- a/src/Pages/Details/styles.css
+++ b/src/Pages/Details/styles.css
@@ -103,3 +103,59 @@ span {
   position: float;
   z-index: 2;
 }
+
+@media screen and (min-width: 1024px) {
+  .main-parent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 6rem;
+    margin-bottom: 0;
+  }
+
+  .main-parent > div {
+    max-width: 65%;
+    align-items: center;
+    /* background-color: white; */
+    padding-top: 1.5rem;
+  }
+
+  .hero {
+    border-radius: 5%;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    max-width: 100%;
+  }
+
+  .title-cntl {
+    display: flex;
+    justify-content: center;
+    width: 60%;
+  }
+
+  span {
+    width: 80%;
+  }
+
+  .main-parent h2 {
+    text-align: center;
+  }
+  
+  .video {
+    width: 50vw;
+  }
+
+  .video > iframe {
+    height: 30vw;
+  }
+
+  .init-btn {
+    bottom: 0.8rem;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    position: fixed;
+    text-align: center;
+    width: 30%;
+    right: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
