--- a/src/Pages/InProcess/styles.css
+++ b/src/Pages/InProcess/styles.css
@@ -21,3 +21,15 @@
   display: flex;
   flex-flow: column;
 }
+
+@media screen and (min-width: 1024px) {
+  .end-btn-cntl {
+    width: 30vw;
+  }
+
+  .end-btn-cntl button {
+    bottom: 0.8rem;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    width: 30%;
+  }
+}
