--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -26,3 +26,14 @@
   font-size: 1.5rem;
   margin: auto;
 }
+
+@media screen and (min-width: 1024px) {
+  .header-parent h2 {
+    font-size: 2.5rem;
+  }
+
+  .main-header {
+    padding: 0.8rem 1.8rem;
+    flex-flow: row-reverse wrap;
+  }
+}
