--- a/src/Components/Loading/styles.css
+++ b/src/Components/Loading/styles.css
@@ -4,9 +4,18 @@
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 10%;
 }
 
 .loading img {
   height: auto;
   max-width: 40vw;
+  border-radius: 10%;
+}
+
+@media screen and (min-width: 1024px) {
+  .loading img {
+    height: auto;
+    max-width: 10vw;
+  }
 }
