--- a/src/Components/SearchBar/styles.css
+++ b/src/Components/SearchBar/styles.css
@@ -10,3 +10,9 @@
   align-self: flex-start;
   margin-top: 0.5rem;
 }
+
+@media screen and (min-width: 1024px) {
+  .searchbar-parent {
+    max-width: 40%;
+  }
+}
