--- a/src/Components/SearchCategories/styles.css
+++ b/src/Components/SearchCategories/styles.css
@@ -11,3 +11,10 @@
   margin: 5px 8px;
   width: 140px;
 }
+
+@media screen and (min-width: 1024px) {
+  .categories-container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
